<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateFragment"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:background="@drawable/input_primary_flat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/component_big">
            <com.ismealdi.lagu.view.AmTextView
                style="@style/AppTheme.TextLabelInput"
                app:Amedit="@id/textName"
                app:Amfont="M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_name" />

            <com.ismealdi.lagu.view.AmEditText
                style="@style/AppTheme.TextInput"
                app:Amfont="R"
                android:id="@+id/textName"
                android:hint="@string/text_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:inputType="textPersonName"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/input_primary_flat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/component_big">
            <com.ismealdi.lagu.view.AmTextView
                style="@style/AppTheme.TextLabelInput"
                app:Amedit="@id/textDescription"
                app:Amfont="M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_description" />

            <com.ismealdi.lagu.view.AmEditText
                style="@style/AppTheme.TextInput"
                app:Amfont="R"
                android:id="@+id/textDescription"
                android:hint="@string/text_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="@dimen/component_big">
            <LinearLayout
                android:background="@drawable/input_primary_flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.ismealdi.lagu.view.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:Amfont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/text_date" />

                <com.ismealdi.lagu.view.AmTextView
                    style="@style/AppTheme.TextInput"
                    app:Amfont="R"
                    android:id="@+id/textDate"
                    android:hint="@string/text_date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <View
                android:id="@+id/textDateLayout"
                android:clickable="true"
                android:focusable="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>
        </RelativeLayout>

        <com.ismealdi.lagu.view.AmTextView
            app:Amfont="L"
            android:layout_marginTop="@dimen/component_small"
            android:layout_marginBottom="@dimen/component_small"
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorError"
            android:textSize="@dimen/text_small"
            android:layout_gravity="center"/>

        <com.ismealdi.lagu.view.AmButton
            app:Amfont="M"
            android:id="@+id/buttonSave"
            android:stateListAnimator="@null"
            android:layout_marginTop="@dimen/component_extra"
            android:layout_marginBottom="@dimen/component_extra"
            style="@style/AppTheme.ButtonInput.Flat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_create"
            android:textColor="@color/colorWhite"
            tools:targetApi="lollipop" />

    </LinearLayout>

</LinearLayout>